# R2-Robocon

./: README.md
Microros_pub_sub/: platformio.ini  src.code-workspace  tempCodeRunnerFile
Microros_pub_sub/arduino_scripts/: platform.io.ino
Microros_pub_sub/arduino_scripts/Td_luna_i2c_single_channel/: Td_luna_i2c_single_channel.ino
Microros_pub_sub/arduino_scripts/i2c_scanner_and_add_change/: i2c_scanner_and_add_change.ino
Microros_pub_sub/src/: main.cpp
ball_tracking/: package.xml  setup.cfg  setup.py
ball_tracking/ball_tracking/: detect.py  detect2.py  detect3.py  detect4.py  testnode.py  testnode2.py  testnode3.py  videocapture.py
line_following/: CMakeLists.txt  package.xml
line_following/config/: line_follower.yaml
line_following/include/line_following/: line_follower_header.hpp
line_following/launch/: fake_line_follower.launch.py
line_following/line_following/: line_following.py  lsa08_due_fake.py  pid_tuning.py
line_following/src/: line_follower.cpp
luna_control/: package.xml  setup.cfg  setup.py
luna_control/luna_control/: luna_IMU_full_orient.py  luna_IMU_intial_orient.py  luna_align_with_full_imu_data_error.py  luna_wall_align.py
r2_bringup/: CMakeLists.txt  package.xml
r2_bringup/config/: ball_tracking.yaml  imu_filter.yaml  joystick.yaml  localization.yaml  luna_allign.yaml  turtlesim_params.yaml
r2_bringup/launch/: ball_tracker.launch.py  imu_filter.launch.py  joystick.launch.py  luna_allign.launch.py  motor_test.launch.py  r2_startup.launch.py  robot_localization.launch.py  turtlesim_test.launch.py
r2_description/: CMakeLists.txt  package.xml
r2_description/launch/: display.launch.py  display.launch.xml  gazebo.launch.py
r2_description/rviz/: model.rviz
r2_description/urdf/: r2.urdf  r2_plain.urdf
r2_interfaces/: CMakeLists.txt  package.xml
r2_interfaces/action/: CountUntil.action
r2_interfaces/msg/: LedStateArray.msg
r2_py/: package.xml  setup.cfg  setup.py
r2_py/r2_py/: cmd_vel_slow_pub.py  force_stop.py  motor_client.py  motor_server_fake.py  number_counter.py  number_publisher.py  ps4.py  quaternion_to_rpy.py  test_node1.py  test_node2.py
silo_tracking/: package.xml  setup.cfg  setup.py
silo_tracking/silo_tracking/: silo_detect.py  silo_tracking2.py
